# embedded_monitoring

./: .gitignore  CMakeLists.txt  README.md  housekeeping.c  housekeeping.h  main.c  update_actions.c  update_actions.h  update_commands.c  update_commands.h  update_triggers.c  update_triggers.h
actions/: action.c  action.h
commands/: command_parsing.c  command_parsing.h  commands.h
encoders/: encoders.c  encoders.h
flat/: monster.fbs  monster_builder.h  monster_reader.h  monster_verifier.h
tests/: tests.c
triggers/: triggers.c  triggers.h
utils/staticvector/: staticvector.c  staticvector.h
